--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,18 +15,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Openfl-snapsvg</h1>
-        <p class="header">The HTML5 backend for OpenFL based on Snap.SVG</p>
+        <h1>Openfl-snapsvg</h1>
+        <p>The HTML5 backend for OpenFL based on Snap.SVG</p>
+
+        <p class="view"><a href="https://github.com/ngrebenshikov/openfl-snapsvg">View the Project on GitHub <small>ngrebenshikov/openfl-snapsvg</small></a></p>
+
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/ngrebenshikov/openfl-snapsvg/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/ngrebenshikov/openfl-snapsvg/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/ngrebenshikov/openfl-snapsvg">View On GitHub</a></li>
+          <li><a href="https://github.com/ngrebenshikov/openfl-snapsvg/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ngrebenshikov/openfl-snapsvg/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ngrebenshikov/openfl-snapsvg">View On <strong>GitHub</strong></a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/ngrebenshikov">ngrebenshikov</a></p>
-
-
       </header>
       <section>
         <h1>
@@ -44,11 +42,12 @@
 </code></pre>
       </section>
       <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p>This project is maintained by <a href="https://github.com/ngrebenshikov">ngrebenshikov</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
+    <script src="javascripts/scale.fix.js"></script>
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
