--- a/index.html
+++ b/index.html
@@ -14,38 +14,44 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <h1>Openfl-snapsvg</h1>
-        <p>The HTML5 backend for OpenFL based on Snap.SVG</p>
+	    <header>
+			<h1>Openfl-snapsvg</h1>
+			<p>The HTML5 backend for OpenFL based on Snap.SVG</p>
+			<p class="view"><a href="https://github.com/ngrebenshikov/openfl-snapsvg">View the Project on GitHub <small>ngrebenshikov/openfl-snapsvg</small></a></p>
+		</header>
+		<section>
+			<h1><a name="openfl-snapsvg" class="anchor" href="#openfl-snapsvg"><span class="octicon octicon-link"></span></a>Demos</h1>
+			<div class="demo">
+				<div class="thumb"><a href="demos/actuate/index.html"><img src="images/actuate.png" width="100" height="80" border="0"/></a></div>
+				<h2><a href="demos/actuate/index.html">Actuate</a></h2>
+				<div class="source"><a href="https://github.com/ngrebenshikov/openfl-samples/tree/master/ActuateExample">Source</a></div>
+			</div>
+			<div class="demo">
+				<div class="thumb"><a href="demos/bunnies-bitmap/index.html"><img src="images/bunnies.png" width="100" height="80" border="0"/></a></div>
+				<h2>BunnyMark</h2>
+				<div class="source"><a href="demos/bunnies-bitmap/index.html">Bitmap bunnies</a></div>
+				<div class="source"><a href="demos/bunnies-svg/index.html">SVG bunnies</a></div>
+				<div class="source"><a href="https://github.com/ngrebenshikov/openfl-samples/tree/master/BunnyMark">Source</a></div>
+			</div>
+			<div class="demo">
+				<div class="thumb"><a href="demos/aswing/index.html"><img src="images/aswing.png" width="100" height="80" border="0"/></a></div>
+				<h2><a href="demos/aswing/index.html">Aswing UI</a></h2>
+				<div class="source"><a href="https://github.com/ngrebenshikov/aswing/tree/master/haXeTest">Source</a></div>
+			</div>
 
-        <p class="view"><a href="https://github.com/ngrebenshikov/openfl-snapsvg">View the Project on GitHub <small>ngrebenshikov/openfl-snapsvg</small></a></p>
+			<h1><a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h1>
+			<p>For the "openfl-snapsvg" library, you can use a development build like this:</p>
+			<pre><code>haxelib git https://github.com/ngrebenshikov/openfl-snapsvg</code></pre>
+			<p>Navigate to application.xml of your project and add the following before inclusion of OpenFL library:</p>
+			<pre><code>&lt;set name="html5-backend" value="openfl-snapsvg" /&gt;</code></pre>
+		</section>
 
+		<footer>
+			<p>This project is maintained by <a href="https://github.com/ngrebenshikov">ngrebenshikov</a></p>
+			<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+		</footer>
+	</div>
 
-        <ul>
-          <li><a href="https://github.com/ngrebenshikov/openfl-snapsvg/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ngrebenshikov/openfl-snapsvg/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ngrebenshikov/openfl-snapsvg">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>
-<a name="openfl-snapsvg" class="anchor" href="#openfl-snapsvg"><span class="octicon octicon-link"></span></a>openfl-snapsvg</h1>
-
-<p>It's a very beggining of the HTML5 backend for <a href="http://www.openfl.org">OpenFL</a> based on <a href="http://snapsvg.io">Snap.SVG</a></p>
-
-<h1>
-<a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h1>
-
-<p>For the "openfl-snapsvg" library, you can use a development build like this:</p>
-
-<pre><code>haxelib git https://github.com/ngrebenshikov/openfl-snapsvg
-</code></pre>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/ngrebenshikov">ngrebenshikov</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
     <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
