Fix the haxelib git command on gh-pages as well

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 			<h1><a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h1>
 			<p>For the "openfl-snapsvg" library, you can use a development build like this:</p>
-			<pre><code>haxelib git https://github.com/ngrebenshikov/openfl-snapsvg</code></pre>
+			<pre><code>haxelib git openfl-snapsvg https://github.com/ngrebenshikov/openfl-snapsvg</code></pre>
 			<p>Navigate to application.xml of your project and add the following before inclusion of OpenFL library:</p>
 			<pre><code>&lt;set name="html5-backend" value="openfl-snapsvg" /&gt;</code></pre>
 		</section>
