Stable UI demo added.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 				<div class="source"><a href="https://github.com/ianharrigan/haxeui-showcase">Source</a></div>
 			</div>
 
+			<div class="demo">
+				<div class="thumb"><a href="demos/stablexui-demo/index.html"><img src="images/stablexui-demo.png" width="100" height="80" border="0"/></a></div>
+				<h2><a href="demos/stablexui-demo/index.html">Stablex UI Demo</a></h2>
+				<div class="source"><a href="https://github.com/ngrebenshikov/StablexUI/tree/master/samples/demo">Source</a></div>
+			</div>
+
 			<h1><a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h1>
 			<p>For the "openfl-snapsvg" library, you can use a development build like this:</p>
 			<pre><code>haxelib git openfl-snapsvg https://github.com/ngrebenshikov/openfl-snapsvg</code></pre>
