--- a/demos/aswing/index.html
+++ b/demos/aswing/index.html
@@ -5,6 +5,26 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1, IE=edge">
 	<title>openfl-svg-aswing-tests</title>
 	<script type="text/javascript" src="snap.svg-min.js"></script>
+    <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+    
+    <script type="text/javascript" src="./lib/soundjs.min.js"></script>
+
+    <script>
+        window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, false);
+        if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
+            var meta = document.getElementById ("viewport");
+            meta.setAttribute ('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
+        }
+    </script>
+
+    <style>
+        html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
+        #openfl-content { background: #000000; width: 100%; height: 100%; }
+
+    </style>
+
 </head>
 <body style="width:100%; height:100%; padding: 0; margin: 0; background-color: #FFFFFF;">
 	
@@ -12,11 +32,27 @@
 	
 	
     <div id="haxe:openfl" style="background-color: #FFFFFF; width: 100%; height: 100%" data-framerate="60">
-        <svg id="haxe-openfl-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" style="width:100%; height:100%"></svg>
+        <svg id="haxe-openfl-svg"
+             version="1.1"
+             xmlns="http://www.w3.org/2000/svg"
+             style="width:100%; height:100%"
+             buffered-rendering="dynamic"
+             color-rendering="optimizeSpeed"
+             shape-rendering="optimizeSpeed"
+             text-rendering="optimizeSpeed"
+             image-rendering="optimizeSpeed">
+            <defs>
+            <style type="text/css">
+                <![CDATA[
+                
+                ]]>
+                </style>
+            </defs>
+         </svg>
     </div>
 	<script>function winParameters () { return {}; }</script>
 	<script id="haxe:openfl:script" type="text/javascript" src="./openfl-svg-aswing-tests.js"></script>
-	
+
 	
 
     <div type="text" id="openfl-snapsvg-input" contentEditable="true" style="position:absolute; top:-9999px; left:-9999px; width: 10px; height: 10px; overflow: hidden; " />
