Demos compiled with v0.2

--- a/index.html
+++ b/index.html
@@ -50,12 +50,8 @@
 				<h2><a href="demos/stablexui-demo/index.html">Stablex UI Demo</a></h2>
 				<div class="source"><a href="https://github.com/ngrebenshikov/StablexUI/tree/master/samples/demo">Source</a></div>
 			</div>
-
-			<h1><a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h1>
-			<p>For the "openfl-snapsvg" library, you can use a development build like this:</p>
-			<pre><code>haxelib git openfl-snapsvg https://github.com/ngrebenshikov/openfl-snapsvg</code></pre>
-			<p>Navigate to application.xml of your project and add the following before inclusion of OpenFL library:</p>
-			<pre><code>&lt;set name="html5-backend" value="openfl-snapsvg" /&gt;</code></pre>
+			<br/>
+			<h1><a href="https://github.com/ngrebenshikov/openfl-snapsvg#getting-started">Getting Started</a></h1>
 		</section>
 
 		<footer>
